[project]
name = "dump"
version = "0.2.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyinfra~=3.3",
]

[build-system]
requires = ["uv_build~=0.9.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
# https://docs.astral.sh/uv/reference/settings/#build-backend
module-root = ""
namespace = true

[project.entry-points."pyinfra.connectors"]
incus = "dump.connectors.incus:IncusConnector"
lxc = "dump.connectors.incus:LXCConnector"
